--- a/frontend/src/components/misc/ArticleCard.module.css
+++ b/frontend/src/components/misc/ArticleCard.module.css
@@ -2,6 +2,7 @@
   display: flex;
   width: 100%;
   justify-content: center;
+  margin-bottom: 30px;
   /* align-items: center; */
 }
 
@@ -15,11 +16,16 @@
 .container {
   width: 100%;
   display: flex;
-  justify-content: space-evenly;
+  
 }
 
 .content {
   width: 50%;
+  margin: 0;
+}
+
+.image {
+  width: 100%;
 }
 
 .rating {
